added files .py, .html, .md

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         CONTACTS <br />
     </h1>
 <marquee>'''''''''''''''''''</marquee>
-<a href="http://www.charleskim474.wixsite.com/cicoporation">WEB ADDRESS    
+<a href="https://www.charleskim474.wixsite.com/cicoporation">WEB ADDRESS    
 </a>
 <br>
 <a href="tel:+256706749801">TEL</a>
