--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <!--comment-->
 <html>
     <head>
-        <title>contact page</title>
+        <title>This is contact page</title>
     </head>
     <body background="blue">
     <h1>
